# FilterNArrange

./: .env.example  .gitattributes  .gitignore  .spectral.yaml  CHANGELOG.md  LICENSE  MERGED_BRANCHES.md  NOTICE  README.md  commitlint.config.js  package-lock.json  package.json  release-please-config.json
apps/data-engine/: .dockerignore  .gitignore  .importlinter  Dockerfile  README.md  pyproject.toml
apps/data-engine/src/filternarrange_engine/: __init__.py  main.py
apps/data-engine/src/filternarrange_engine/api/: __init__.py  ai_routes.py  dependencies.py  main.py  metrics_routes.py  routes_analysis.py  routes_convert.py  routes_detect.py  routes_filter.py  routes_sheets.py  schemas.py
apps/data-engine/src/filternarrange_engine/application/: ai_orchestrator.py  analysis_service.py  audit.py  convert_service.py  detect_service.py  filter_service.py  heartbeat.py  pipeline.py  worker.py
apps/data-engine/src/filternarrange_engine/core/: __init__.py  analysis.py  canonical.py  filter_spec.py  llm.py  (+5 more)
apps/data-engine/tests/: test_ai_cache_roundtrip.py  test_ai_concurrency.py  test_ai_wiring.py  test_health.py  test_import_linter.py
apps/data-engine/tests/api/: test_ai_routes.py  test_analyze_endpoint.py  test_filter_preview_all_kinds.py  test_routes.py  test_sheets_endpoint.py
apps/data-engine/tests/application/: test_ai_orchestrator.py  test_heartbeat.py  test_worker.py  test_worker_stub.py
apps/data-engine/tests/core/: test_analysis.py  test_canonical.py  test_filter_spec.py  test_llm_types.py  test_plugin_api.py
apps/data-engine/tests/platform/: test_config_ai.py  test_mode.py
apps/data-engine/tests/retention/: test_config.py  test_sweeper.py
plugins/ai-anomaly-detect/: README.md  manifest.toml  pyproject.toml
plugins/ai-anomaly-detect/src/filternarrange_ai_anomaly_detect/: __init__.py  plugin.py  prompts.py  schema.py
plugins/ai-anomaly-detect/tests/: test_plugin.py
plugins/ai-auto-summary/: README.md  manifest.toml  pyproject.toml
plugins/ai-auto-summary/src/filternarrange_ai_auto_summary/: __init__.py  plugin.py  prompts.py  schema.py
plugins/ai-auto-summary/tests/: test_plugin.py
plugins/ai-chart-suggest/: README.md  manifest.toml  pyproject.toml
plugins/ai-chart-suggest/src/filternarrange_ai_chart_suggest/: __init__.py  plugin.py  prompts.py  schema.py
plugins/ai-chart-suggest/tests/: test_plugin.py
plugins/ai-nl-to-filter/: README.md  manifest.toml  pyproject.toml
plugins/ai-nl-to-filter/src/filternarrange_ai_nl_to_filter/: __init__.py  plugin.py  prompts.py  schema.py
plugins/ai-nl-to-filter/tests/: test_plugin.py
plugins/analysis-chart-suggest/: README.md  manifest.toml  pyproject.toml
plugins/analysis-chart-suggest/src/filternarrange_analysis_chart_suggest/: plugin.py
plugins/analysis-chart-suggest/tests/: test_analyze.py
plugins/analysis-group-by/: README.md  manifest.toml  pyproject.toml
plugins/analysis-group-by/src/filternarrange_analysis_group_by/: plugin.py
plugins/analysis-group-by/tests/: test_analyze.py
plugins/analysis-schema-infer/: README.md  manifest.toml  pyproject.toml
plugins/analysis-schema-infer/src/filternarrange_analysis_schema_infer/: plugin.py
plugins/analysis-schema-infer/tests/: test_analyze.py
plugins/analysis-summary-stats/: README.md  manifest.toml  pyproject.toml
plugins/analysis-summary-stats/src/filternarrange_analysis_summary_stats/: plugin.py
plugins/analysis-summary-stats/tests/: test_analyze.py
plugins/filter-column/: manifest.toml  pyproject.toml
plugins/filter-column/src/filternarrange_filter_column/: plugin.py
plugins/filter-column/tests/: test_apply.py  test_validate.py
plugins/filter-expression/: README.md  manifest.toml  pyproject.toml
plugins/filter-expression/src/filternarrange_filter_expression/: apply.py  plugin.py  translate.py  validate.py
plugins/filter-expression/tests/: test_apply.py
plugins/filter-regex/: README.md  manifest.toml  pyproject.toml
plugins/filter-regex/src/filternarrange_filter_regex/: apply.py  plugin.py  validate.py
plugins/filter-regex/tests/: test_apply.py
plugins/filter-row/: README.md  manifest.toml  pyproject.toml
plugins/filter-row/src/filternarrange_filter_row/: apply.py  plugin.py  validate.py
plugins/filter-row/tests/: test_apply.py
plugins/format-csv/: manifest.toml  pyproject.toml
plugins/format-csv/src/filternarrange_format_csv/: __init__.py  detect.py  emit.py  parse.py  plugin.py
plugins/format-csv/tests/: conftest.py  test_detect.py  test_emit.py  test_parse.py
plugins/format-csv/tests/fixtures/: people.csv
plugins/format-json/: manifest.toml  pyproject.toml
plugins/format-json/src/filternarrange_format_json/: detect.py  emit.py  parse.py  plugin.py
plugins/format-json/tests/: conftest.py  test_detect.py  test_emit.py  test_parse.py
plugins/format-json/tests/fixtures/: nested.json  people.json
plugins/format-jsonl/: README.md  manifest.toml  pyproject.toml
plugins/format-jsonl/src/filternarrange_format_jsonl/: detect.py  emit.py  parse.py  plugin.py
plugins/format-jsonl/tests/: test_conformance.py  test_detect.py  test_emit.py  test_parse.py
plugins/format-jsonl/tests/fixtures/: sample.jsonl
plugins/format-tsv/: README.md  manifest.toml  pyproject.toml
plugins/format-tsv/src/filternarrange_format_tsv/: detect.py  emit.py  parse.py  plugin.py
plugins/format-tsv/tests/: test_conformance.py  test_detect.py  test_emit.py  test_parse.py
plugins/format-tsv/tests/fixtures/: sample.tsv
plugins/format-xml/: README.md  manifest.toml  pyproject.toml
plugins/format-xml/src/filternarrange_format_xml/: detect.py  emit.py  parse.py  plugin.py
plugins/format-xml/tests/: test_conformance.py  test_detect.py  test_emit.py  test_parse.py
plugins/format-xml/tests/fixtures/: sample.xml
plugins/format-yaml/: README.md  manifest.toml  pyproject.toml
plugins/format-yaml/src/filternarrange_format_yaml/: detect.py  emit.py  parse.py  plugin.py
plugins/format-yaml/tests/: test_conformance.py  test_detect.py  test_emit.py  test_parse.py
plugins/format-yaml/tests/fixtures/: sample.yaml
(+411 files in other folders)
