[project]
name = "filternarrange-engine"
version = "0.1.0"
description = "FilterNArrange data-engine"
requires-python = ">=3.12"
license = { text = "Apache-2.0" }
dependencies = [
  "fastapi==0.115.0",
  "uvicorn[standard]==0.30.6",
  "pydantic==2.9.2",
  "minio==7.2.9",
  "httpx==0.27.2",
  "python-multipart==0.0.10",
  "structlog==24.4.0",
  "typing-extensions>=4.12",
  "aiokafka>=0.11",
  "jsonschema>=4.22",
  "redis>=5.0",
  "psycopg[binary]>=3.2",
  "prometheus-client>=0.20",
  # Plan G §T12 — OTLP tracing. Activated by configure_tracing() in
  # platform/tracing.py; ships traces to otel-collector:4318/v1/traces.
  "opentelemetry-api>=1.27",
  "opentelemetry-sdk>=1.27",
  "opentelemetry-exporter-otlp-proto-http>=1.27",
  "opentelemetry-instrumentation-fastapi>=0.48b0",
]

[project.scripts]
retention-sweep = "filternarrange_engine.retention.cli:main"

[project.optional-dependencies]
dev = [
  "pytest==8.3.3",
  "pytest-asyncio==0.24.0",
  "import-linter==2.1",
  "ruff==0.6.9",
  "mypy==1.11.2",
  "types-jsonschema",
  "respx>=0.21",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/filternarrange_engine"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]

[[tool.mypy.overrides]]
module = "aiokafka.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "minio"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "psycopg"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "opentelemetry.*"
ignore_missing_imports = true
