[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "filternarrange-ai-anomaly-detect"
version = "1.0.0"
description = "AI anomaly + data-quality detection capability plugin"
requires-python = ">=3.12"
license = { text = "Apache-2.0" }
dependencies = ["filternarrange-engine"]

[project.entry-points."filternarrange.ai_capabilities"]
anomaly_detect = "filternarrange_ai_anomaly_detect.plugin:AnomalyDetectCapability"

[project.optional-dependencies]
dev = ["pytest==8.3.3", "pytest-asyncio==0.24.0"]

[tool.hatch.build.targets.wheel]
packages = ["src/filternarrange_ai_anomaly_detect"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
