[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "filternarrange-ai-auto-summary"
version = "1.0.0"
description = "AI auto-summary capability plugin"
requires-python = ">=3.12"
license = { text = "Apache-2.0" }
dependencies = ["filternarrange-engine"]

[project.entry-points."filternarrange.ai_capabilities"]
auto_summary = "filternarrange_ai_auto_summary.plugin:AutoSummaryCapability"

[project.optional-dependencies]
dev = ["pytest==8.3.3", "pytest-asyncio==0.24.0"]

[tool.hatch.build.targets.wheel]
packages = ["src/filternarrange_ai_auto_summary"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
