[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "filternarrange-ai-chart-suggest"
version = "1.0.0"
description = "AI chart-suggestion capability plugin"
requires-python = ">=3.12"
license = { text = "Apache-2.0" }
dependencies = ["filternarrange-engine"]

[project.entry-points."filternarrange.ai_capabilities"]
chart_suggest = "filternarrange_ai_chart_suggest.plugin:ChartSuggestCapability"

[project.optional-dependencies]
dev = ["pytest==8.3.3", "pytest-asyncio==0.24.0"]

[tool.hatch.build.targets.wheel]
packages = ["src/filternarrange_ai_chart_suggest"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
