[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "filternarrange-ai-nl-to-filter"
version = "1.0.0"
description = "AI natural-language to FilterSpec capability plugin"
requires-python = ">=3.12"
license = { text = "Apache-2.0" }
dependencies = ["filternarrange-engine"]

[project.entry-points."filternarrange.ai_capabilities"]
nl_to_filter = "filternarrange_ai_nl_to_filter.plugin:NlToFilterCapability"

[project.optional-dependencies]
dev = ["pytest==8.3.3", "pytest-asyncio==0.24.0"]

[tool.hatch.build.targets.wheel]
packages = ["src/filternarrange_ai_nl_to_filter"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
