[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "filternarrange-analysis-chart-suggest"
version = "0.1.0"
description = "Vega-Lite chart-suggestion analysis plugin"
requires-python = ">=3.12"
license = { text = "Apache-2.0" }
dependencies = ["filternarrange-engine"]

[project.entry-points."filternarrange.analyses"]
chart_suggest = "filternarrange_analysis_chart_suggest:plugin"

[project.optional-dependencies]
dev = ["pytest==8.3.3", "pytest-asyncio==0.24.0"]

[tool.hatch.build.targets.wheel]
packages = ["src/filternarrange_analysis_chart_suggest"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
