[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "filternarrange-filter-expression"
version = "0.1.0"
description = "Expression filter plugin (SQL-ish + simpleeval)"
requires-python = ">=3.12"
license = { text = "Apache-2.0" }
dependencies = ["filternarrange-engine", "simpleeval>=0.9"]

[project.entry-points."filternarrange.filters"]
expression = "filternarrange_filter_expression:plugin"

[project.optional-dependencies]
dev = ["pytest==8.3.3", "pytest-asyncio==0.24.0"]

[tool.hatch.build.targets.wheel]
packages = ["src/filternarrange_filter_expression"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
