[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "filternarrange-filter-row"
version = "0.1.0"
description = "Row predicate filter plugin"
requires-python = ">=3.12"
license = { text = "Apache-2.0" }
dependencies = ["filternarrange-engine"]

[project.entry-points."filternarrange.filters"]
row = "filternarrange_filter_row:plugin"

[project.optional-dependencies]
dev = ["pytest==8.3.3", "pytest-asyncio==0.24.0"]

[tool.hatch.build.targets.wheel]
packages = ["src/filternarrange_filter_row"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
