[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "filternarrange-format-jsonl"
version = "0.1.0"
description = "JSON Lines format plugin"
requires-python = ">=3.12"
license = { text = "Apache-2.0" }
dependencies = ["filternarrange-engine"]

[project.entry-points."filternarrange.formats"]
jsonl = "filternarrange_format_jsonl:plugin"

[project.optional-dependencies]
dev = ["pytest==8.3.3", "pytest-asyncio==0.24.0"]

[tool.hatch.build.targets.wheel]
packages = ["src/filternarrange_format_jsonl"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
