[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "filternarrange-format-tsv"
version = "0.1.0"
description = "TSV format plugin"
requires-python = ">=3.12"
license = { text = "Apache-2.0" }
dependencies = ["filternarrange-engine"]

[project.entry-points."filternarrange.formats"]
tsv = "filternarrange_format_tsv:plugin"

[project.optional-dependencies]
dev = ["pytest==8.3.3", "pytest-asyncio==0.24.0"]

[tool.hatch.build.targets.wheel]
packages = ["src/filternarrange_format_tsv"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
