[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "filternarrange-format-xml"
version = "0.1.0"
description = "XML format plugin via lxml"
requires-python = ">=3.12"
license = { text = "Apache-2.0" }
dependencies = ["filternarrange-engine", "lxml>=5"]

[project.entry-points."filternarrange.formats"]
xml = "filternarrange_format_xml:plugin"

[project.optional-dependencies]
dev = ["pytest==8.3.3", "pytest-asyncio==0.24.0"]

[tool.hatch.build.targets.wheel]
packages = ["src/filternarrange_format_xml"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
