[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "filternarrange-format-yaml"
version = "0.1.0"
description = "YAML format plugin (safe loader only)"
requires-python = ">=3.12"
license = { text = "Apache-2.0" }
dependencies = ["filternarrange-engine", "PyYAML>=6"]

[project.entry-points."filternarrange.formats"]
yaml = "filternarrange_format_yaml:plugin"

[project.optional-dependencies]
dev = ["pytest==8.3.3", "pytest-asyncio==0.24.0"]

[tool.hatch.build.targets.wheel]
packages = ["src/filternarrange_format_yaml"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
